# pinbrd

./: .gitignore  Cargo.toml  ROADMAP.md  flake.nix
egui_graphs/: Cargo.toml
egui_graphs/src/: graph.rs  graph_view.rs  helpers.rs  lib.rs  metadata.rs
egui_graphs/src/draw/: displays.rs  drawer.rs  mod.rs
egui_graphs/src/draw/displays_default/: edge.rs  node.rs
egui_graphs/src/elements/: edge.rs  node.rs
egui_graphs/src/events/: event.rs  mod.rs
src/: graph.rs  main.rs  pinboard.rs  previewer.rs
